--- a/src/styles/traffic-light.css
+++ b/src/styles/traffic-light.css
@@ -12,7 +12,6 @@
   .light {
     width: 100px;
     height: 100px;
-    border: 2px solid black;
     border-radius: 50%;
     margin: 10px;
     cursor: pointer;
@@ -24,11 +23,11 @@
   }
   
   .yellow {
-    background-color: #ffff00;
+    background-color: #e5e50f;
   }
   
   .green {
-    background-color: #00ff00;
+    background-color: #0fbf0f;
   }
   
   .glow {
